# metanoos

./: .gitignore  ARCHITECTURE.md  LAB.md  README.md  pyproject.toml
corpora/greek_classics/: README.md
scripts/: run_ablation.py  run_order_sweep.py
src/metanoos/: __init__.py  ablations.py  complex_ops.py  corpora.py  layers.py  model.py  state.py
tests/: test_corpora.py  test_model.py  test_state.py
