[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metanoos"
version = "0.1.0"
description = "PyTorch implementation of associative complex relational sequence state composition."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
